@@ -3,6 +3,8 @@ ChangeLog for PyLint
 
 --
 
+    * fix test/fulltest.sh
+    * include simple message (ids) listing by Vincent Férotin (#9791)
     * --errors-only does not hide fatal error anymore
     * include james Lingar patches for ++/-- and duplicate key in dicts
     * include James Lingar patches for function call arguments checker
